--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ asgiref==3.7.2
 backports.zoneinfo==0.2.1
 click==8.1.7
 colorama==0.4.6
+coverage==7.3.2
 cssbeautifier==1.14.9
 Django==4.2.6
+django-debug-toolbar==4.2.0
 django-dotenv==1.4.2
 djlint==1.34.0
 EditorConfig==0.12.3
