--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,12 @@ djangorestframework==3.14.0
 djlint==1.34.0
 drf-nested-routers==0.93.4
 EditorConfig==0.12.3
+gunicorn==21.2.0
 html-tag-names==0.1.2
 html-void-elements==0.1.0
 jsbeautifier==1.14.9
 json5==0.9.14
+packaging==23.2
 pathspec==0.11.2
 pilkit==3.0
 Pillow==10.0.1
