--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ coverage==7.3.2
 cssbeautifier==1.14.9
 Django==4.2.6
 django-appconf==1.0.5
+django-cors-headers==4.3.0
 django-debug-toolbar==4.2.0
 django-dotenv==1.4.2
 django-imagekit==5.0.0
@@ -23,6 +24,7 @@ packaging==23.2
 pathspec==0.11.2
 pilkit==3.0
 Pillow==10.0.1
+pkg_resources==0.0.0
 psycopg2-binary==2.9.9
 pytz==2023.3.post1
 PyYAML==6.0.1
